Atualização na página Sobre e Mudança de Parceiros

--- a/Dale/index.html
+++ b/Dale/index.html
@@ -144,9 +144,9 @@
   <div class="col-sm-1"></div>
 
   <div class="col-sm-2">
-    <a href="https://www.gamemax-br.com" target="_blank">
+    <a href="https://www.intelbras.com/pt-br/" target="_blank">
       <div class="card card-parceiros">
-        <img src="img/gamemax_logo.png">
+        <img src="img/intelbras_logo.png">
       </div>
     </a>
   </div>
@@ -164,7 +164,7 @@
   </div>
 </div>
 
-<a href="#whatsapp" class="whatsapp">
+<a href="#whatsapp" class="whatsapp" id="whats_exibir">
 <div id="scroll-top">
 
     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
@@ -173,6 +173,7 @@
 
 </div>
 </a>
+
 
 
 <!-- FOOTER/INÍCIO -->
@@ -203,7 +204,7 @@
             <center>
               <ul class="nav flex-column col-5 align">
                 <li class="nav-item mb-2"><a href="https://www.gigabyte.com/br"    target="_blank" class="nav-link p-0 text-light dl-animation-footer ">Gigabyte</a></li>
-                <li class="nav-item mb-2"><a href="https://www.gamemax-br.com"     target="_blank"class="nav-link p-0 text-light dl-animation-footer ">Gamemax</a></li>
+                <li class="nav-item mb-2"><a href="https://www.intelbras.com/pt-br/"     target="_blank"class="nav-link p-0 text-light dl-animation-footer ">Intelbras</a></li>
                 <li class="nav-item mb-2"><a href="https://www.logitech.com/pt-br" target="_blank" class="nav-link p-0 text-light dl-animation-footer ">Logitech</a></li>
               </ul>
             </center>
@@ -232,6 +233,7 @@
   const y = new Date();
   let year = y.getFullYear();
   document.getElementById("year").innerHTML = year;
+
 </script>
 
 <style>
