--- a/Dale/contact.html
+++ b/Dale/contact.html
@@ -43,7 +43,7 @@
 
 <div class="container col-xxl-8 px-4 py-5">
   <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-    <div class="col-10 col-sm-8 col-lg-6 text-align-contact">
+    <div class="col-12 col-sm-8 col-lg-6 text-align-contact">
       <h1 class="display-6 fw-bold lh-1 mb-3">Mande sua questão🤔</h1>
       <div class="d-grid gap-2 d-md-flex justify-content-md-start">
         <div>
@@ -148,7 +148,7 @@
             <center>
               <ul class="nav flex-column col-5 align">
                 <li class="nav-item mb-2"><a href="https://www.gigabyte.com/br"    target="_blank" class="nav-link p-0 text-light dl-animation-footer ">Gigabyte</a></li>
-                <li class="nav-item mb-2"><a href="https://www.gamemax-br.com"     target="_blank"class="nav-link p-0 text-light dl-animation-footer ">Gamemax</a></li>
+                <li class="nav-item mb-2"><a href="https://www.intelbras.com/pt-br/"     target="_blank"class="nav-link p-0 text-light dl-animation-footer ">Intelbras</a></li>
                 <li class="nav-item mb-2"><a href="https://www.logitech.com/pt-br" target="_blank" class="nav-link p-0 text-light dl-animation-footer ">Logitech</a></li>
               </ul>
             </center>
