--- a/Dale/partners.html
+++ b/Dale/partners.html
@@ -54,9 +54,9 @@
   <div class="col-sm-1"></div>
 
   <div class="col-sm-2">
-    <a href="https://www.gamemax-br.com" target="_blank">
+    <a href="https://www.intelbras.com/pt-br/" target="_blank">
       <div class="card card-parceiros">
-        <img src="img/gamemax_logo.png">
+        <img src="img/intelbras_logo.png">
       </div>
     </a>
   </div>
@@ -105,7 +105,7 @@
             <center>
               <ul class="nav flex-column col-5 align">
                 <li class="nav-item mb-2"><a href="https://www.gigabyte.com/br"    target="_blank" class="nav-link p-0 text-light dl-animation-footer ">Gigabyte</a></li>
-                <li class="nav-item mb-2"><a href="https://www.gamemax-br.com"     target="_blank"class="nav-link p-0 text-light dl-animation-footer ">Gamemax</a></li>
+                <li class="nav-item mb-2"><a href="https://www.intelbras.com/pt-br/"     target="_blank"class="nav-link p-0 text-light dl-animation-footer ">Intelbras</a></li>
                 <li class="nav-item mb-2"><a href="https://www.logitech.com/pt-br" target="_blank" class="nav-link p-0 text-light dl-animation-footer ">Logitech</a></li>
               </ul>
             </center>
