--- a/Dale/security.html
+++ b/Dale/security.html
@@ -140,7 +140,7 @@
             <center>
               <ul class="nav flex-column col-5 align">
                 <li class="nav-item mb-2"><a href="https://www.gigabyte.com/br"    target="_blank" class="nav-link p-0 text-light dl-animation-footer ">Gigabyte</a></li>
-                <li class="nav-item mb-2"><a href="https://www.gamemax-br.com"     target="_blank"class="nav-link p-0 text-light dl-animation-footer ">Gamemax</a></li>
+                <li class="nav-item mb-2"><a href="https://www.intelbras.com/pt-br/"     target="_blank"class="nav-link p-0 text-light dl-animation-footer ">Intelbras</a></li>
                 <li class="nav-item mb-2"><a href="https://www.logitech.com/pt-br" target="_blank" class="nav-link p-0 text-light dl-animation-footer ">Logitech</a></li>
               </ul>
             </center>
